static/css/settings.css
/* ... */
.user-item,
.adapter-item,
.addon-item,
.authorization-item,
.discovered-addon-item,
.domain-item {
  display: block;
  font-size: 1.8rem;
  list-style-type: none;
  color: #fff;
  border-radius: 0.5rem;
  margin-bottom: 1rem;
}

.user-item,
.adapter-item,
.addon-item,
.authorization-item,
.domain-item {
  background-color: #5288af;
}

.domain-item {
  padding: 2rem;
}

.discovered-addon-item {
  background-color: #597285;
}

.user-settings-header,
.adapter-settings-header,
.addon-settings-header {
  padding: 2rem 2rem 0.5rem 6.5rem;
  background-size: 4rem;
  background-repeat: no-repeat;
  background-position: 1.8rem 2.8rem;
}

.user-settings-header {
  background-image: url('../optimized-images/user.svg');
}

.adapter-settings-header {
  background-image: url('../optimized-images/adapters-icon.png');
}

.addon-settings-header {
  background-image: url('../optimized-images/add-on.svg');
}

.user-settings-name,
.adapter-settings-name {
  display: block;
}

.addon-settings-version {
  float: right;
}

.addon-updating {
  margin-right: .8rem;
}

.user-settings-description,
.adapter-settings-description,
.addon-settings-description,
.domain-settings-description {
  display: block;
  color: #ccc;
}

.domain-settings-error {
  color: #ff9955;
  font-size: 1.4rem;
  padding: 0 0 1rem 0;
}

.domain-settings-error.hidden {
  display: none;
}

#domain-settings-local-label {
  display: block;
}

#domain-settings-local-name {
  display: inline-block;
  margin: 1.5rem auto;
}

#domain-settings-local-update {
  display:block;
}

#domain-settings-tunnel-name {
  font-size: 1.4rem;
}

.addon-settings-author {
  font-size: 1.4rem;
  font-style: italic;
  color: #ccc
}

.addon-settings-author a:link,
.addon-settings-author a:visited,
.addon-settings-author a:hover,
.addon-settings-author a:active {
  color: #fff;
}

.user-settings-controls,
.adapter-settings-controls,
.addon-settings-controls {
  padding: 0rem 1rem 1rem 1rem;
  text-align: right;
}

.user-settings-controls button,
.adapter-settings-controls button,
.addon-settings-controls button {
  font-size: 1.8rem;
}

.user-settings-edit,
.user-settings-remove,
.adapter-settings-disable,
.adapter-settings-enable,
.addon-settings-disable,
.addon-settings-enable,
.addon-discovery-settings-add,
.addon-discovery-settings-installing,
.addon-discovery-settings-install-failed,
.addon-settings-remove {
  background-size: 2rem;
  background-repeat: no-repeat;
  background-position: 0.5em;
  padding-left: 4rem;
}

.user-settings-edit,
.user-settings-remove,
.adapter-settings-disable,
.adapter-settings-enable,
.addon-settings-config,
.addon-settings-update,
.addon-settings-disable,
.addon-settings-enable,
.addon-settings-remove,
.domain-settings-update {
  background-color: #48779a;
}

.addon-discovery-settings-add {
  background-color: #7f93a1;
}

.addon-settings-config {
  background-size: 2rem;
  background-repeat: no-repeat;
  background-position: 0.5em;
  padding-left: 4rem;
  margin-right: .8rem;
  background-image: url('../optimized-images/settings-icon.png');
}

.addon-settings-config.hidden {
  display: none;
}

.addon-settings-update {
  background-size: 3rem;
  background-repeat: no-repeat;
  background-position: 0.5em;
  padding-left: 4rem;
  margin-right: .8rem;
  background-image: url('../optimized-images/update-icon.svg');
}

.addon-settings-update.hidden {
  display: none;
}

.adapter-settings-disable,
.addon-settings-disable {
  background-image: url('../optimized-images/disable.svg');
}

.adapter-settings-enable,
.addon-settings-enable {
  background-image: url('../optimized-images/enable.svg');
}

.user-settings-edit {
  background-image: url('../optimized-images/edit-plain.svg');
}

.addon-settings-remove,
.user-settings-remove {
  margin-right: .8rem;
  background-image: url('../optimized-images/remove.svg');
}

.addon-discovery-settings-add {
  background-image: url('../optimized-images/new.svg');
}

#add-user-button,
#discover-addons-button {
  bottom: 2rem;
  right: 2rem;
  background-image: url('../optimized-images/add.svg');
}

#user-settings-edit,
#user-settings-add,
#addon-discovery-settings {
  background-color: #305067;
}

.update-item {
  padding: 2rem;
}

:root .developer-checkbox,
:root .experiment-checkbox {
  /* original check box is pushed outside the viewport */
  position: absolute;
  left: -1000em;
}

:root .developer-checkbox + label:before,
:root .experiment-checkbox + label:before {
  content: "";
  display: inline-block;
  width  : 3rem;
  height : 3rem;
  float: right;
  margin : 0.1rem 0;
  background: url("../optimized-images/checkbox-sprite.png") no-repeat 0 0;
  background-size: 3rem auto;
}

:root .developer-checkbox:checked + label:before,
:root .experiment-checkbox:checked + label:before {
  background-position: 0 -3rem;
}

:root .developer-checkbox:disabled + label:before,
:root .experiment-checkbox:disabled + label:before {
  background-position: 0 -6rem;
}

:root .developer-checkbox:checked:disabled + label:before,
:root .experiment-checkbox:checked:disabled + label:before {
  background-position: 0 -9rem;
}

#domain-settings-local-checkbox + label:before {
  float: none;
  vertical-align: middle;
  margin-right: 0.5rem;
}

#enable-ssh-item {
  background-image: url('../optimized-images/ssh-icon.svg');
}

#speech-experiment-item {
  background-image: url('../optimized-images/speech-icon.png');
}

#view-logs {
  background-image: url('../optimized-images/rules-icon.png');
}

#new-local-authorization {
  background-image: url('../optimized-images/authorization.svg');
}

#update-now.hidden {
  display: none;
}

#update-settings > .settings-container {
  font-size: 1.8rem;
}

#up-to-date-container {
  display: flex;
  justify-content: space-between;
}

#update-now {
  font-size: 1.8rem;
  padding: 1.8rem;
  margin-left: 1rem;
  background: #305067;
}

#update-settings-up-to-date {
}
/* ... */

